# orders-api

./: .env  Dockerfile  README.md  alembic.ini  dev.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py  worker_main.py
app/api/: exception_handlers.py  routes.py  schemas.py
app/clients/: requester_client.py
app/config/: settings.py
app/domain/: entities.py  exceptions.py  ports.py
app/messaging/: outbox_worker.py  sqs_publisher.py
app/observability/: logging.py  metrics.py  middleware.py  tracing.py
app/repositories/: database.py  models.py  order_repository.py  outbox_repository.py
app/services/: order_service.py
diagrama c4/: c4-nivel2-3.drawio
mocks/: requester_mock.py
scripts/: localstack-init.sh
tests/: conftest.py
tests/integration/: test_create_order_api.py
tests/unit/: test_order_service.py  test_repositories.py  test_requester_client.py  test_worker.py
